--- a/Caikon/Views/Home/Privacy.cshtml
+++ b/Caikon/Views/Home/Privacy.cshtml
@@ -3,4 +3,7 @@
 }
 <h2>@ViewData["Title"]</h2>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="body-content">
+    <br /><br />
+    <img src="http://www.andrefelizardo.com.br/blog/wp-content/uploads/2015/11/em_construcao1.jpg" alt="funny GIF" width="100%" />
+</div>
