--- a/Caikon/Views/Home/About.cshtml
+++ b/Caikon/Views/Home/About.cshtml
@@ -4,4 +4,7 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="body-content">
+    <br /><br />
+    <img src="http://www.andrefelizardo.com.br/blog/wp-content/uploads/2015/11/em_construcao1.jpg" alt="funny GIF" width="100%" />
+</div>
