--- a/Caikon/Views/Pessoas/Cadastro.cshtml
+++ b/Caikon/Views/Pessoas/Cadastro.cshtml
@@ -7,7 +7,7 @@
     Formulário de Cadastro
 </h3>
 <hr />
-<form asp-action="GravarCadastro" asp-anti-forgery="true" method="post">
+<form asp-action="Cadastro" asp-anti-forgery="true" method="post">
     <div class="form-group">
         <label asp-for="Nome"></label>
         <input asp-for="Nome" class="form-control" placeholder="Informe o nome" />
