--- a/Caikon/Views/Pessoas/Create.cshtml
+++ b/Caikon/Views/Pessoas/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Caikon.Models.Pessoa
+﻿@model Caikon.Models.FormViewModel.VMFormPessoa
 
 @{
     ViewData["Title"] = "Create";
@@ -36,6 +36,11 @@
                 <label asp-for="Cep" class="control-label"></label>
                 <input asp-for="Cep" class="form-control" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Senha" class="control-label"></label>
+                <input asp-for="Senha" class="form-control" />
+                <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
